<resources>
    <string name="app_name">QuickCartAdmin</string>
    <string name="add">Add</string>
    <string name="please_fill_product_details">Please fill product details!</string>
    <string name="product_title">Product title</string>
    <string name="quantity">Quantity</string>
    <string name="unit">Unit</string>
    <string name="price">Price</string>
    <string name="no_of_stocks">No of stocks</string>
    <string name="product_cateogry">Product Cateogry</string>
    <string name="product_type">Product Type</string>
    <string name="edit">Edit</string>
    <string name="please_select_some_image">Please select some image</string>
    <string name="todo">TODO</string>
    <string name="add_product">Add product</string>
    <string name="no_products_added_in_this_category">No Products Added in this category!</string>
    <string name="search">Search</string>
    <string name="_91">+91</string>
    <string name="we_have_sent_a_verification_code_to">We have sent a verification code to</string>
    <string name="login">Login</string>
    <string name="no_order_fount_yet">No order fount yet !</string>
    <string name="address">Address</string>
    <string name="show">show</string>
    <string name="todo_1">TODO</string>
    <string name="oredred_items">Oredred Items</string>
    <string name="change_status">Change Status</string>
    <string name="ordered_items">Ordered Items</string>
    <string name="india_s_original_grocery_app">India\'s original grocery app</string>
    <string name="login_or_sign_up">Login or Sign up</string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="Continue">Continue</string>
    <string name="quick">Quick</string>
    <string name="cart">cart</string>
    <string name="india_s_last_minute_app">India\'s Last minute app</string>
    <string name="a_young_startup">A young Startup</string>
    <string name="mgf_shoping_mall">MGF Shopping Mall</string>
    <string name="_100g">100g</string>
    <string name="_50">₹50</string>
    <string name="_1">1</string>
    <string name="_9923e320">9923e320</string>
    <string name="delivered">Delivered</string>
    <string name="_500">₹500</string>
    <string name="all">All</string>
    <string name="mgf_shopping_mall_buy_your_daily_needed_material_form_here">MGF Shopping Mall Buy your daily needed material form here</string>
    <string name="_300ml">300ml</string>
    <string name="_25">₹25</string>
    <string name="loading">Loading..</string>
    <string name="state">State</string>
    <string name="delete">Delete</string>
</resources>