<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".fragments.AddProductFragment">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/yellow"
        app:title="Add Product"
        app:titleTextColor="@color/black" />

    <TextView
        android:id="@+id/tvTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="13.00dp"
        android:text="@string/please_fill_product_details"
        android:textColor="@color/grayish_blue"
        android:textSize="18.20sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/productTitle"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="26.00dp"
                android:layout_marginTop="1.30dp"
                app:boxCornerRadiusBottomEnd="16.90dp"
                app:boxCornerRadiusBottomStart="16.90dp"
                app:boxCornerRadiusTopEnd="16.90dp"
                app:boxCornerRadiusTopStart="16.90dp"
                app:cursorColor="@color/yellow"
                app:endIconMode="clear_text"
                app:hintTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etProductTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="9.10dp"
                    android:hint="@string/product_title"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="26.00dp"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:weightSum="1">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/productQuantity"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="2.6dp"
                    android:layout_weight="0.5"
                    app:boxCornerRadiusBottomEnd="16.90dp"
                    app:boxCornerRadiusBottomStart="16.90dp"
                    app:boxCornerRadiusTopEnd="16.90dp"
                    app:boxCornerRadiusTopStart="16.90dp"
                    app:cursorColor="@color/yellow"
                    app:endIconMode="clear_text"
                    app:hintTextColor="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etProductQuantity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="9.10dp"
                        android:hint="@string/quantity"
                        android:inputType="number" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/productUnit"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="2.6dp"
                    android:layout_weight="0.5"
                    app:boxCornerRadiusBottomEnd="16.90dp"
                    app:boxCornerRadiusBottomStart="16.90dp"
                    app:boxCornerRadiusTopEnd="16.90dp"
                    app:boxCornerRadiusTopStart="16.90dp"
                    app:cursorColor="@color/yellow"
                    app:hintTextColor="@color/black">

                    <AutoCompleteTextView
                        android:id="@+id/etProductUnit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/unit" />

                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="26dp"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:weightSum="1">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/productPrice"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="2.6dp"
                    android:layout_weight="0.5"
                    app:boxCornerRadiusBottomEnd="16.90dp"
                    app:boxCornerRadiusBottomStart="16.90dp"
                    app:boxCornerRadiusTopEnd="16.90dp"
                    app:boxCornerRadiusTopStart="16.90dp"
                    app:cursorColor="@color/yellow"
                    app:endIconMode="clear_text"
                    app:hintTextColor="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etProductPrice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="9.10dp"
                        android:hint="@string/price"
                        android:inputType="number" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/productStocks"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="2.6dp"
                    android:layout_weight="0.5"
                    app:boxCornerRadiusBottomEnd="16.90dp"
                    app:boxCornerRadiusBottomStart="16.90dp"
                    app:boxCornerRadiusTopEnd="16.90dp"
                    app:boxCornerRadiusTopStart="16.90dp"
                    app:cursorColor="@color/yellow"
                    app:endIconMode="clear_text"
                    app:hintTextColor="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etProductStocks"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/no_of_stocks"
                        android:inputType="number" />

                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/productCategory"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="26.00dp"
                app:boxCornerRadiusBottomEnd="16.90dp"
                app:boxCornerRadiusBottomStart="16.90dp"
                app:boxCornerRadiusTopEnd="16.90dp"
                app:boxCornerRadiusTopStart="16.90dp"
                app:cursorColor="@color/yellow"
                app:hintTextColor="@color/black"
                app:startIconDrawable="@drawable/baseline_category_24">

                <AutoCompleteTextView
                    android:id="@+id/etProductCategory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/product_cateogry" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/productType"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="26dp"
                android:layout_weight="0.5"
                app:boxCornerRadiusBottomEnd="16.90dp"
                app:boxCornerRadiusBottomStart="16.90dp"
                app:boxCornerRadiusTopEnd="16.90dp"
                app:boxCornerRadiusTopStart="16.90dp"
                app:cursorColor="@color/yellow"
                app:hintTextColor="@color/black"
                app:startIconDrawable="@drawable/baseline_category_24"


                >

                <AutoCompleteTextView
                    android:id="@+id/etProductType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableTint="@color/grayish_blue"
                    android:hint="@string/product_type" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvPic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="3.90dp"
                    android:layout_marginTop="13dp"
                    android:text="@string/please_select_some_image"
                    android:textColor="@color/black"
                    android:textSize="18.20sp"
                    android:textStyle="bold" />

                <ImageButton
                    android:id="@+id/btnSelectImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:visibility="visible"
                    android:layout_marginStart="10dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/baseline_add_a_photo_24" />


            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvProductImages"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginHorizontal="16.90dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_view_image_selection" />

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="58.50dp"
                android:layout_gravity="center"
                android:layout_margin="13.00dp"
                android:layout_marginHorizontal="26dp"
                android:layout_marginTop="6.50dp"
                android:backgroundTint="@color/yellow"
                android:text="@string/add_product"
                android:id="@+id/btnAddProduct"
                android:textAllCaps="false"
                android:textColor="@color/black"
                app:cornerRadius="10.40dp" />


        </LinearLayout>
    </ScrollView>


</LinearLayout>