<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="13.00dp"
        android:text="@string/please_fill_product_details"
        android:textColor="@color/yellow"
        android:textSize="18.20sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/productTitle"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="26.00dp"
                android:layout_marginTop="1.30dp"
                android:enabled="false"
                app:boxCornerRadiusBottomEnd="16.90dp"
                app:boxCornerRadiusBottomStart="16.90dp"
                app:boxCornerRadiusTopEnd="16.90dp"
                app:boxCornerRadiusTopStart="16.90dp"
                app:cursorColor="@color/yellow"
                app:endIconMode="clear_text"
                app:hintTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etProductTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="9.10dp"
                    android:hint="@string/product_title"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="26.00dp"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:weightSum="1">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/productQuantity"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="2.6dp"
                    android:layout_weight="0.5"
                    android:enabled="false"
                    app:boxCornerRadiusBottomEnd="16.90dp"
                    app:boxCornerRadiusBottomStart="16.90dp"
                    app:boxCornerRadiusTopEnd="16.90dp"
                    app:boxCornerRadiusTopStart="16.90dp"
                    app:cursorColor="@color/yellow"
                    app:endIconMode="clear_text"
                    app:hintTextColor="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etProductQuantity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="9.10dp"
                        android:hint="@string/quantity"
                        android:inputType="number" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/productUnit"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="2.6dp"
                    android:layout_weight="0.5"
                    android:enabled="false"
                    app:boxCornerRadiusBottomEnd="16.90dp"
                    app:boxCornerRadiusBottomStart="16.90dp"
                    app:boxCornerRadiusTopEnd="16.90dp"
                    app:boxCornerRadiusTopStart="16.90dp"
                    app:cursorColor="@color/yellow"
                    app:hintTextColor="@color/black">

                    <AutoCompleteTextView
                        android:id="@+id/etProductUnit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/unit" />

                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="26dp"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:weightSum="1">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/productPrice"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="2.6dp"
                    android:layout_weight="0.5"
                    android:enabled="false"
                    app:boxCornerRadiusBottomEnd="16.90dp"
                    app:boxCornerRadiusBottomStart="16.90dp"
                    app:boxCornerRadiusTopEnd="16.90dp"
                    app:boxCornerRadiusTopStart="16.90dp"
                    app:cursorColor="@color/yellow"
                    app:endIconMode="clear_text"
                    app:hintTextColor="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etProductPrice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="9.10dp"
                        android:hint="@string/price"
                        android:inputType="number" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/productStocks"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="2.6dp"
                    android:layout_weight="0.5"
                    android:enabled="false"
                    app:boxCornerRadiusBottomEnd="16.90dp"
                    app:boxCornerRadiusBottomStart="16.90dp"
                    app:boxCornerRadiusTopEnd="16.90dp"
                    app:boxCornerRadiusTopStart="16.90dp"
                    app:cursorColor="@color/yellow"
                    app:endIconMode="clear_text"
                    app:hintTextColor="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etProductStocks"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/no_of_stocks"
                        android:inputType="number" />

                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/productCategory"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="26.00dp"
                android:enabled="false"
                app:boxCornerRadiusBottomEnd="16.90dp"
                app:boxCornerRadiusBottomStart="16.90dp"
                app:boxCornerRadiusTopEnd="16.90dp"
                app:boxCornerRadiusTopStart="16.90dp"
                app:cursorColor="@color/yellow"
                app:hintTextColor="@color/black"
                app:startIconDrawable="@drawable/baseline_category_24">

                <AutoCompleteTextView
                    android:id="@+id/etProductCategory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/product_cateogry" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/productType"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="26dp"
                android:layout_weight="0.5"
                android:enabled="false"
                app:boxCornerRadiusBottomEnd="16.90dp"
                app:boxCornerRadiusBottomStart="16.90dp"
                app:boxCornerRadiusTopEnd="16.90dp"
                app:boxCornerRadiusTopStart="16.90dp"
                app:cursorColor="@color/yellow"
                app:hintTextColor="@color/black"
                app:startIconDrawable="@drawable/baseline_category_24"

                >

                <AutoCompleteTextView
                    android:id="@+id/etProductType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableTint="@color/grayish_blue"
                    android:hint="@string/product_type" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="26dp"
                android:layout_marginTop="13dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="2">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnEdit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/yellow"
                    android:minWidth="120dp"
                    android:minHeight="48dp"
                    android:padding="10dp"
                    android:text="@string/edit"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:cornerRadius="10dp"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintVertical_bias="0.5" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnAdd"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/yellow"
                    android:minWidth="120dp"
                    android:minHeight="48dp"
                    android:padding="10dp"
                    android:text="@string/add"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:cornerRadius="10dp" />

            </LinearLayout>


        </LinearLayout>
    </ScrollView>


</LinearLayout>